--- a/toshiba-remote-G83C0004D110.conf
+++ b/toshiba-remote-G83C0004D110.conf
@@ -1,11 +1,17 @@
+#
 # this config file was automatically generated
 # using lirc-0.8.7-CVS(default) on Sat Apr  3 11:49:40 2010
 #
-# Special keys added by D of play-zone.ch
+# based on file contributed by Sami Racho
+#
+# brand: Toshiba
+# model no. of remote control: G83C0008A110
+# devices being controlled by this remote: Toshiba Qosmio F10, F15, G10, G15 Series models
+#
 
 begin remote
 
-  name            Toshiba
+  name        Toshiba_G83C0008A110
   bits                 16
   flags  RC6|CONST_LENGTH
   eps                  30
@@ -21,7 +27,7 @@ begin remote
   rc6_mask    0x100000000
   
       begin codes
-        KEY_HOME          0x00007bf3   # Power
+        KEY_HOME          0x00007bf3   # Power KEY_HOME instead KEY_POWER
         
         KEY_RECORD        0x00007be8   # Record
         KEY_STOP          0x00007be6   # Stop
@@ -36,10 +42,10 @@ begin remote
         
         KEY_BACK          0x00007bdc   # Back
         
-        KEY_RIGHT         0x00007bde
-        KEY_LEFT          0x00007bdf
-        KEY_DOWN          0x00007be0
-        KEY_UP            0x00007be1
+        KEY_RIGHT         0x00007bde   # Arrow right
+        KEY_LEFT          0x00007bdf   # Arrow left
+        KEY_DOWN          0x00007be0   # Arrow down
+        KEY_UP            0x00007be1   # Arrow up
         KEY_OK            0x00007bdd   # OK
         
         KEY_INFO          0x00007bf0   # More / Info
