Update Layout add Change Language
Change KEY_AUDIO to KEY_LANGUAGE to add the option to change the Audiotrack

--- a/toshiba-remote-G83C0004D110.conf
+++ b/toshiba-remote-G83C0004D110.conf
@@ -29,7 +29,7 @@ begin remote
       begin codes
         KEY_HOME          0x00007bf3   # Power KEY_HOME instead KEY_POWER
         
-        KEY_RECORD        0x00007be8   # Record
+        #KEY_RECORD        0x00007be8   # Record
         KEY_STOP          0x00007be6   # Stop
         KEY_PLAY          0x00007be9   # Play
         KEY_PAUSE         0x00007be7   # Pause
@@ -59,7 +59,7 @@ begin remote
         KEY_CHANUP        0x00007bed   # CH/PG +
         KEY_CHANDOWN      0x00007bec   # CH/PG -
         
-        KEY_AUDIO         0x00007bb7   # Recorded TV
+        KEY_LANGUAGE      0x00007bb7   # Recorded TV
         KEY_SUBTITLE      0x00007bd9   # Guide (Subtitle)
         KEY_MENU          0x00007bda   # Live TV
         KEY_TITLE         0x00007bdb   # DVD Menu (Context Menu)
